# Aixlarity

./: .gitignore  AGENTS.md  CONTRIBUTING.md  Cargo.toml  README.en.md  README.md  SECURITY.md
.claude/: settings.local.json
.github/: PULL_REQUEST_TEMPLATE.md
aixlarity-ide/: dump_errors.js  package.json  product.json  scratch_linear.html  scratch_svg.html  scratch_svg2.html  tsc-output.txt
crates/aixlarity-cli/: Cargo.toml
crates/aixlarity-cli/src/: bin_test.rs  main.rs
crates/aixlarity-core/: Cargo.toml
crates/aixlarity-core/src/: agent.rs  app.rs  cache.rs  commands.rs  config.rs  external_cli_config.rs  hooks.rs  instructions.rs  lib.rs  mcp.rs  mission_control.rs  output.rs  plugins.rs  prompt.rs  providers.rs  session.rs  skills.rs  test_serde.rs  tools.rs  workspace.rs  worktree.rs
crates/aixlarity-core/src/agent/: memory.rs  permissions.rs  runtime_support.rs  types.rs
crates/aixlarity-core/src/agent/adapters/: anthropic.rs  external_cli.rs  gemini.rs  mod.rs  openai.rs  sse.rs
crates/aixlarity-core/src/prompt/: command_invocation.rs  expansion.rs
crates/aixlarity-core/src/providers/: config_loader.rs  profiles.rs  types.rs
crates/aixlarity-core/src/session/: history.rs  model.rs  storage.rs
crates/aixlarity-core/src/tools/: apply_patch.rs  browser_subagent.rs  common.rs  container.rs  context.rs  coordinator.rs  fetch_url.rs  list_dir.rs  local_history.rs  memory_tool.rs  merge_gate.rs  read_file.rs  registry.rs  session_search.rs  shell.rs  skill_manager.rs  write_file.rs
crates/gcd-cli/: Cargo.toml
crates/gcd-cli/src/: main.rs
(+207 files in other folders)
