[package]
name = "aixlarity"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"

[[bin]]
name = "aixlarity"
path = "src/main.rs"

[dependencies]
aixlarity-core = { path = "../aixlarity-core" }

clap = { version = "4", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rustyline = "14"
colored = "2"
async-trait = "0.1"
base64 = "0.22"
uuid = { version = "1", features = ["v4"] }
