[package]
name = "aixlarity-core"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
anyhow = "1.0"
async-trait = "0.1"
reqwest = { version = "0.11", default-features = false, features = ["json", "rustls-tls", "stream"] }
tokio = { version = "1", features = ["full"] }
futures-util = "0.3"
colored = "2"
base64 = "0.22.1"
uuid = { version = "1.23.1", features = ["v4"] }
